<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="name_app">aircandi</string>
    <string name="name_company">3meters LLC.</string>
    <string name="menu_beacons_item">Beacons</string>
    <string name="menu_add_entity_item">Add</string>
    <string name="menu_add_comment_item">Add comment</string>
    <string name="menu_add_picture_item">Add picture</string>
    <string name="menu_refresh_item">Refresh</string>
    <string name="menu_edit_item">Edit</string>
    <string name="menu_profile_item">Profile</string>
    <string name="menu_home_item">Home</string>
    <string name="menu_settings_item">Settings</string>
    <string name="menu_help_item">Help</string>
    <string name="menu_signout_item">Sign out</string>
    <string name="menu_signin_item">Sign in</string>
    <string name="menu_test_item">Test</string>
    <string name="menu_send_item">Send</string>
    <string name="menu_invite_item">Invite</string>
    <string name="menu_feedback_item">Feedback</string>
    <string name="menu_delete_item">Delete</string>
    <string name="menu_clear_item">Clear</string>
    <string name="menu_accept_item">Accept</string>
    <string name="menu_cancel_item">Cancel</string>
    <string name="menu_zoom_in_item">Zoom in</string>
    <string name="menu_zoom_out_item">Zoom out</string>
    <string name="menu_tune_item">Tune to this location</string>
    <string name="menu_report_item">Report a problem</string>
    <string name="menu_block_item">Block</string>
    <string name="menu_unblock_item">Unblock</string>
    <string name="tab_radar_item">radar</string>
    <string name="tab_activity_item">activity</string>
    <string name="tab_watching_item">watch</string>
    <string name="tab_created_item">mine</string>
    <string name="pref_dialog_ok">OK</string>
    <string name="pref_dialog_cancel">Cancel</string>
    <string name="pref_category_title_general">General</string>
    <string name="pref_category_title_about">About</string>
    <string name="pref_category_title_development">Development</string>
    <string name="pref_search_radius_title">Scanning</string>
    <string name="pref_search_radius_dialog_title">Select scanning distance</string>
    <string name="pref_theme_title">Themes</string>
    <string name="pref_theme_dialog_title">Select theme</string>
    <string name="pref_place_provider_dialog_title">Place provider to use</string>
    <string name="pref_place_provider_title">Place provider</string>
    <string name="pref_place_provider_summary">Specify which place provider should be used when scanning for nearby places</string>
    <string name="pref_sound_effects_summary">Play sound notifications and effects</string>
    <string name="pref_sound_effects_title">Sounds</string>
    <string name="pref_notifications_comments_title">Comments</string>
    <string name="pref_notifications_comments_summary">Notify me about comments on items</string>
    <string name="pref_notifications_pictures_title">Pictures</string>
    <string name="pref_notifications_pictures_summary">Notify me when pictures are added</string>
    <string name="pref_notifications_candigrams_title">Candigrams</string>
    <string name="pref_notifications_candigrams_summary">Notify me when candigrams are added</string>
    <string name="pref_notifications_nearby_title">Nearby</string>
    <string name="pref_notifications_nearby_summary">Notify me about activity nearby</string>
    <string name="pref_notifications_own_title">Owned</string>
    <string name="pref_notifications_own_summary">Notify me about activity with items I own</string>
    <string name="pref_notifications_watch_title">Watching</string>
    <string name="pref_notifications_watch_summary">Notify me about activity with items I\'m watching</string>
    <string name="help_radar_browse_places">Radar finds places nearby you can browse and interact with</string>
    <string name="help_radar_add_places">Use the action bar to create and share custom places</string>
    <string name="help_place_tune">Tune places to make them better</string>
    <string name="help_place_add">Use the action bar to add pictures and comments</string>
    <string name="dummy_title">Zoka Coffee Roaster &amp; Tea Company</string>
    <string name="dummy_title_short">Zoka Coffee</string>
    <string name="dummy_subtitle">Roasters &amp; Tea Company</string>
    <string name="dummy_subtitle_notification">added a big fabulous candigram to a place you are watching very closely.</string>
    <string name="dummy_category_name">Restaurant</string>
    <string name="dummy_uri">http://goodeats.com</string>
    <string name="dummy_name">Jay Massena</string>
    <string name="dummy_alert">Link failed verification</string>
    <string name="dummy_label">candigram</string>
    <string name="dummy_location">Seattle, WA</string>
    <string name="dummy_address">"2200 N 56th (at Keystone Pl N)\nSeattle, WA 98103\n(206) 545&#8211;4277"</string>
    <string name="dummy_comments">21 comments</string>
    <string name="dummy_copyright">&#169;2013 3meters LLC.</string>
    <string name="dummy_version">Version: 0.9.35 (76)</string>
    <string name="dummy_install_id" tools:ignore="TypographyDashes">f8953a63-2019-4793-9b03-e93370913c4b</string>
    <string name="dummy_install_date">December 23 at 10:12am</string>
    <string name="dummy_install_type">serial_num</string>
    <string name="dummy_candigram_action">checking schedule</string>
    <string name="dummy_number">10</string>
    <string name="dummy_like_stat">12 likes</string>
    <string name="dummy_watch_stat">8 watching</string>
    <string name="dummy_place_stat">28 places</string>
    <string name="dummy_timesince">10 minutes ago</string>
    <string name="dummy_type_candigram">bouncing</string>
    <string name="dummy_web_address">http://massenamodern.com</string>
    <string name="dummy_datetime">December 23 at 10:12am</string>
    <string name="dummy_tags">Coffee Shop, Cafe, Tea Room</string>
    <string name="dummy_button_label">Watch</string>
    <string name="dummy_description">Ever wonder why Aircandi fans refuse to use anything else? For more than four days, Aircandi has attracted a growing family of loyal, almost zealous customers, known as “Candiniks”. By remaining true to the quality tenets of our founder – emphasizing knowledge, taste, and using the senses to evaluate quality at every step – Aircandi defines the gold standard by which all other proximity applications are judged.</string>
    <string name="dummy_username" tools:ignore="UnusedResources,UnusedResources">jay.massena</string>
    <string name="dummy_edit_hint" tools:ignore="UnusedResources">How long a candigram will stay someplace before moving on</string>
    <string name="alert_entity_locked_candigram">This candigram has been locked by the owner.</string>
    <string name="alert_entity_locked_place">This place has been locked by the owner.</string>
    <string name="alert_entity_locked_picture">This picture has been locked by the owner.</string>
    <string name="alert_wifi_title">Aircandi</string>
    <string name="alert_wifi_tethered">Turn off hotspot tethering for best results using Aircandi.</string>
    <string name="alert_wifi_disabled">Enable wifi for best results using Aircandi.</string>
    <string name="alert_wifi_settings">Settings</string>
    <string name="alert_wifi_cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="alert_deleted">deleted</string>
    <string name="alert_updated">updated</string>
    <string name="alert_inserted">saved</string>
    <string name="alert_started">started</string>
    <string name="alert_stopped">stopped</string>
    <string name="alert_signed_in">signed in as</string>
    <string name="alert_password_changed">password changed for</string>
    <string name="alert_beacons_title">aircandi beacons</string>
    <string name="alert_send_password_title">forgot password</string>
    <string name="alert_send_password_message">A message has been sent to your email address with your current password.</string>
    <string name="alert_feedback_sent">Thank you for the feedback!</string>
    <string name="alert_report_sent">Your report has been sent. Thank you!</string>
    <string name="alert_invite_sent">Your invitation has been sent. Thank you!</string>
    <string name="alert_invite_sent_plural">Your invitations have been sent. Thank you!</string>
    <string name="alert_candigram_toured">This candigram traveled to a new place</string>
    <string name="alert_candigram_bounced">This candigram was kicked to a new place</string>
    <string name="alert_candigram_expanded">This candigram was repeated to another place</string>
    <string name="alert_applink_broken">Link failed verification</string>
    <string name="alert_applinks_broken">One or more links failed verification</string>
    <string name="alert_signin_title">Aircandi</string>
    <string name="alert_signin_signin">Signin</string>
    <string name="alert_signin_register">Register</string>
    <string name="alert_signin_cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="alert_signin_message">Sign in to use this feature.</string>
    <string name="alert_signin_message_place_add_to">Sign in to add candigrams, pictures or comments.</string>
    <string name="alert_signin_message_candigram_add_to">Sign in to add pictures or comments.</string>
    <string name="alert_signin_message_picture_add_to">Sign in to add comments.</string>
    <string name="alert_signin_message_place_add">Sign in to mark new places.</string>
    <string name="alert_signin_message_candigram_add">Sign in to add candigrams.</string>
    <string name="alert_signin_message_picture_add">Sign in to add pictures.</string>
    <string name="alert_signin_message_comment_add">Sign in to add comments.</string>
    <string name="alert_signin_message_place_edit">Sign in to edit places.</string>
    <string name="alert_signin_message_candigram_edit">Sign in to edit candigrams.</string>
    <string name="alert_signin_message_picture_edit">Sign in to edit pictures.</string>
    <string name="alert_signin_message_place_watch">Sign in to watch places.</string>
    <string name="alert_signin_message_candigram_watch">Sign in to watch candigrams.</string>
    <string name="alert_signin_message_picture_watch">Sign in to watch pictures.</string>
    <string name="alert_signin_message_user_watch">Sign in to watch users.</string>
    <string name="alert_signin_message_place_like">Sign in to like places.</string>
    <string name="alert_signin_message_candigram_like">Sign in to like candigrams.</string>
    <string name="alert_signin_message_picture_like">Sign in to like pictures.</string>
    <string name="symbol_bullet">•</string>
    <string name="dialog_install_message">An android application is available for this link.</string>
    <string name="dialog_install_ok">install</string>
    <string name="dialog_install_cancel">no thanks</string>
    <string name="form_button_sign_in">sign in</string>
    <string name="form_button_register">register</string>
    <string name="form_button_terms">Terms of service</string>
    <string name="form_button_privacy">Privacy policy</string>
    <string name="form_button_legal">Open source licenses</string>
    <string name="form_button_send_password">forgot password?</string>
    <string name="form_label_password">password (6 characters or more)</string>
    <string name="form_label_password_unmask">show password</string>
    <string name="form_label_email">email</string>
    <string name="form_phone_hint">phone</string>
    <string name="form_address_hint">address</string>
    <string name="form_state_hint">state</string>
    <string name="form_city_hint">city</string>
    <string name="form_zipcode_hint">zipcode</string>
    <string name="signin_message_general">Sign in to create and share candi with other Aircandi users!</string>
</resources>