<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh"
        android:actionLayout="@layout/actionbar_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_refresh_item"/>
    <item
        android:id="@+id/add_comment"
        android:icon="?attr/iconAdd"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_add_comment_item"/>
    <item
        android:id="@+id/profile"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_profile_item"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_settings_item"/>
    <item
        android:id="@+id/signout"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_signout_item"/>
    <item
        android:id="@+id/update"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_update_item"/>
    <item
        android:id="@+id/feedback"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_feedback_item"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_about_item"/>

</menu>