<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/beacons"
        android:title="@string/menu_beacons_item"
        android:actionLayout="@layout/actionbar_beacons"
        android:showAsAction="always"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/refresh"
        android:actionLayout="@layout/actionbar_refresh_dark"
        android:title="@string/menu_refresh_item"
        android:showAsAction="always|withText"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_dark"
        android:title="@string/menu_profile_item"
        android:showAsAction="always"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_dark"
        android:title="@string/menu_settings_item"
        android:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/signin"
        android:icon="@drawable/ic_accounts_dark"
        android:title="@string/menu_signin_item"
        android:showAsAction="never"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/signout"
        android:icon="@drawable/ic_accounts_dark"
        android:title="@string/menu_signout_item"
        android:showAsAction="never"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about_dark"
        android:title="@string/menu_about_item"
        android:showAsAction="never"
        android:orderInCategory="2"
        />

</menu>