<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/home"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_home_item"/>
    <item
        android:id="@+id/profile"
        android:orderInCategory="1"
        android:icon="?attr/iconUser"
        android:showAsAction="ifRoom"
        android:title="@string/menu_profile_item"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_settings_item"/>
    <item
        android:id="@+id/feedback"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_feedback_item"/>

</menu>