<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/form_content_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <!-- Title and Content -->

    <com.aircandi.ui.widgets.AirTextView
        android:id="@+id/message"
        style="@style/form_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/signin_message_general"
        android:visibility="gone" />

    <com.aircandi.ui.widgets.AirEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:drawableRight="?attr/iconClear"
        android:hint="@string/form_label_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <com.aircandi.ui.widgets.AirEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:drawableRight="?attr/iconClear"
        android:hint="@string/form_label_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <com.aircandi.ui.widgets.AirCheckBox
        android:id="@+id/chk_unmask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="10dp"
        android:text="@string/form_label_password_unmask"
        android:textAppearance="?android:attr/textAppearance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.aircandi.ui.widgets.AirButton
            android:id="@+id/button_sign_in"
            style="@style/form_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/form_button_height"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:onClick="onSignInButtonClick"
            android:text="@string/form_button_sign_in" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <com.aircandi.ui.widgets.AirButton
            android:id="@+id/button_send_password"
            style="@style/form_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_height"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:onClick="onSendPasswordButtonClick"
            android:text="@string/form_button_send_password" />

        <com.aircandi.ui.widgets.AirButton
            android:id="@+id/button_signup"
            style="@style/form_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_height"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:onClick="onSignupButtonClick"
            android:text="@string/form_button_register" />
    </LinearLayout>

</LinearLayout>