<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/form_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:paddingTop="20dp" >

        <!-- Title and Content -->

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="?attr/logo" />

        <com.aircandi.ui.widgets.AirTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummy_version" />

        <com.aircandi.ui.widgets.AirTextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/dummy_copyright" />

        <com.aircandi.ui.widgets.AirButton
            android:id="@+id/button_terms"
            style="@style/form_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_height"
            android:layout_marginBottom="8dp"
            android:minWidth="200dp"
            android:onClick="onTermsButtonClick"
            android:text="@string/form_button_terms" />

        <com.aircandi.ui.widgets.AirButton
            android:id="@+id/button_legal"
            style="@style/form_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_height"
            android:layout_marginBottom="8dp"
            android:onClick="onLegalButtonClick"
            android:text="@string/form_button_legal" />

        <com.aircandi.ui.widgets.AirButton
            android:id="@+id/button_privacy"
            style="@style/form_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_height"
            android:onClick="onPrivacyButtonClick"
            android:text="@string/form_button_privacy" />
    </LinearLayout>

    <com.aircandi.ui.widgets.AirTextView
        android:id="@+id/install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/holder_install"
        android:layout_marginBottom="5dp"
        android:text="Install" />

    <TableLayout
        android:id="@+id/holder_install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TableRow>

            <com.aircandi.ui.widgets.AirTextView
                android:id="@+id/install_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_install_id"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/textColorSecondary" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/name"
            android:background="?attr/ruleColor" />

        <TableRow>

            <com.aircandi.ui.widgets.AirTextView
                android:id="@+id/install_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_install_type"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/textColorSecondary" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/name"
            android:background="?attr/ruleColor" />

        <TableRow>

            <com.aircandi.ui.widgets.AirTextView
                android:id="@+id/install_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_install_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/textColorSecondary" />
        </TableRow>
    </TableLayout>

</RelativeLayout>