<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:layout_gravity="center"
	android:padding="25dp">
	<TextView
		android:id="@+id/txt_dialog_message"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:text="@string/dialog_install_message"
		style="@style/txt_dialog"
		android:gravity="center" />
	<LinearLayout
		android:id="@+id/group_install"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_below="@id/txt_dialog_message"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btn_install_ok"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/btn_dialog"
			android:text="@string/dialog_install_ok" />
		<Button
			android:id="@+id/btn_install_cancel"
			style="@style/btn_dialog"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_install_cancel" />
	</LinearLayout>
</RelativeLayout>