<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aircandi="http://schemas.android.com/apk/res/com.aircandi"
    android:id="@+id/item_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp" >

    <com.aircandi.ui.widgets.AirImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/image_small"
        android:layout_height="@dimen/image_small"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        aircandi:sizeHint="@dimen/image_small" />

    <RelativeLayout
        android:id="@+id/holder_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/photo"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/photo"
        android:orientation="horizontal" >

        <com.aircandi.ui.widgets.AirTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dummy_name"
            android:textColor="?attr/textColorSecondary"
            android:textStyle="bold" />

        <com.aircandi.ui.widgets.AirTextView
            android:id="@+id/separator"
            style="@style/bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/name"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/symbol_bullet" />

        <com.aircandi.ui.widgets.AirTextView
            android:id="@+id/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/name"
            android:text="@string/dummy_location"
            android:textColor="?attr/textColorSecondary" />
    </RelativeLayout>

    <com.aircandi.ui.widgets.AirTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/holder_author"
        android:layout_below="@+id/holder_author"
        android:layout_marginBottom="5dp"
        android:text="@string/dummy_description" />

    <LinearLayout
        android:id="@+id/holder_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/holder_author"
        android:layout_below="@+id/description"
        android:orientation="horizontal" >

        <com.aircandi.ui.widgets.AirTextView
            android:id="@+id/created_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_datetime"
            android:textColor="?attr/textColorSecondary" />
    </LinearLayout>

</RelativeLayout>